[package]
name = "minimeili-raft"
description = "A small implementation of a dummy Meilisearch running on top of Raft"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.71"
axum = { version = "0.6.18", features = ["macros", "headers"] }
clap = { version = "4.3.11", features = ["derive"] }
heed = "0.20.0-alpha.3"
maplit = "1.0.2"
once_cell = "1.18.0"
openraft = { version = "0.8.3", features = ["serde"] }
reqwest = { version = "0.11.18", features = ["json"] }
roaring = { version = "0.10.1", features = ["serde"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
synchronoise = "1.0.1"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.0", features = ["v4", "serde"] }
